
Compatibility:
* #464 - Improve attachment filename detection by preferring Content-Disposition filename. (lawrencepit)
* #535 - IMAP: fetch messages WITH IMAP FLAGS by passing a block with four args. (lawrencepit)
* #655 - Sort attachments to the end of the parts list to work around email clients that may mistake a text attachment for the message body. (npickens)
* #982 – Faithfully preserve unfolded whitespace rather than collapsing to a single space. (jeremy)
* #1103 – Support parsing UTF-8 headers. Implements RFC 6532. (jeremy)

Bugs:
* #539 - Fix that whitespace-only continued headers would be incorrectly parsed as the break between headers and body. (ConradIrwin)
* #605 - Fix Mail::Address#name for nil addresses (peterkovacs)
* #684 - Fix recursively fetching attachments from an embedded message/rfc822 part whose Content-Type header has additional parameters. (vongruenigen)
* #876 - Strip valid RFC-1342 separator characters between non-matching encoded-words (Caleb W. Corliss)
* #876 - Fix that Mail::Message#add_file was adding a stray filename header (kirikak2)
* #923 – Fix decoding nested quotes around non-US-ASCII addresses. (averell23)
* #978 - Fix for invalid chars being left in a string for invalid b_value from encoding. (kjg)
* #996 - Fix that multipart/mixed emails with a delivery-status part could be interpreted as bounces. (kjg)
* #998 - Fix header parameter parsing (such as attachment names) for values encoded with a blank charset or language code. (kjg)
* #1000 - Fix header parameter parsing (such as attachment names) to transcode to UTF-8 (kjg)
* #1003 - Fix decoding some b encoded headers on specific rubies that don't account for lack of base64 padding (kjg)
* #1020 - Don't set SMTP verify mode to nil when config was not provided. (jhass)
* #1023 - Fix double-quoting in display names. (garethrees)
* #1032 - Fix that comparing messages changed their raw Message-ID to their parsed message_id. (bobjflong)